<resources>
    <string name="app_name">Royal Pharmacy</string>
    <string name="facebook_app_id">233524351617827</string>
    <string name="fb_login_protocol_scheme">fb233524351617827</string>
    <string name="deep_link_host">pharmacyapp.page.link</string>
    <string name="deep_linkmainurl">https://www.vgadvantage.com/?p_id=%1$s&amp;p_type=%2$s</string>
    <string name="device_type">android_phone</string>
    <string name="title_login">Login</string>
    <string name="login_text">Sign in to continue</string>
    <string name="email_id">Email </string>
    <string name="pass_otp">Password </string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="already_account">Don\'t Have An Account?</string>
    <string name="signup">Sign In</string>
    <string name="fblogin">f connect with Facebook</string>
    <string name="googlelogin">G+ connect with Google</string>
    <string name="signup_text">Please enter your details to continue</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="mobileno">Mobile No</string>
    <string name="email_address">Email Address</string>
    <string name="referal_code">Referral code (Optional)</string>
    <string name="team_condition">Agree Terms &amp; Conditions</string>
    <string name="alredyloginaccount">Have an Account?</string>
    <string name="forgotpasswordmsg">Please enter the email address to reset your password.</string>
    <string name="submit">SUBMIT</string>
    <string name="input_key">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz1234567890\'_@#$-,/()₹:!%€£".+ </string>
    <string name="interneterror">Please check your Internet connection and try again</string>
    <string name="validEmail">Enter valid Email Address</string>
    <string name="validPassword">Enter valid Password</string>
    <string name="validfirstname">Enter valid First Name</string>
    <string name="validlastname">Enter valid Last Name</string>
    <string name="validmobileno">Please Enter Your Mobile Number</string>
    <string name="validCorporate">Please Enter Your Registered Number</string>
    <string name="validmobilenodigit">Please Enter Your 10 digit Mobile Number</string>
    <string name="validpincode">Enter Valid PinCode</string>
    <string name="validaddress">Enter Valid Address</string>
    <string name="validName">Enter Valid Name</string>
    <string name="validmedicinename">Enter Medicine Name</string>
    <string name="validstate">Select State</string>
    <string name="validcity">Select City</string>
    <string name="validCurrentPassowrd">Enter Current Password</string>
    <string name="validlocation">Please Select Delivery Place</string>
    <string name="validconfrimPassowrd">Password and Confirm Password should be same.</string>
    <string name="verfyotpmsg">Please Check your email or mobile number enter OTP number.</string>
    <string name="one_time_number">Enter the verification code here</string>
    <string name="new_password">New Password</string>
    <string name="done">Done</string>
    <string name="valid_otp">Enter Valid Otp</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="password_msg">Your Password has been changed Successfully</string>
    <string name="wecantfetchdetail">Sorry we can not fetch your details. Please try again later.</string>
    <string name="set_app_email_password">Set your Email &amp; Password</string>
    <string name="set_app_password">Set your Password</string>
    <string name="password_min_characters">Min 8 Characters /</string>
    <string name="uppercase_text">Uppercase /</string>
    <string name="lowerscase_text">Lowercase</string>
    <string name="digit_text">Digit /</string>
    <string name="enter8characters">Enter Minimum 8 Characters</string>
    <string name="uppercase">Password must have at least one uppercase character !!</string>
    <string name="lowercase">Password must have at least one lowercase character !!</string>
    <string name="digitcase">Password must have at least one digit character !!</string>
    <string name="welcome">Welcome To VG</string>
    <string name="mediciones">MEDICINES</string>
    <string name="reminder">REMINDER</string>
    <string name="other">OTHERS</string>
    <string name="find_substitutes">Find Substitutes</string>
    <string name="order_with_prescritpion">Order With Prescription</string>
    <string name="upload_prescription">Prescription Upload</string>
    <string name="schedule">Schedule</string>
    <string name="pill_reminder">Pill Reminder</string>
    <string name="account">Account</string>
    <string name="myorder">My Orders</string>
    <string name="manage_paymnet">Manage Payment</string>
    <string name="preference">Preference</string>
    <string name="articles">Articles</string>
    <string name="labtest">Lab Test</string>
    <string name="askdoctor">Ask Doctor</string>
    <string name="aboutus">About Us</string>
    <string name="refer_earn">Refer &amp; Earn </string>
    <string name="complain_list">Complaint List</string>
    <string name="signout">Sign Out</string>
    <string name="wanttoexits">Are you sure you want to exit? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notabletocommunicatewithserver">Sorry we are not able to communicate with server please try again later</string>
    <string name="login_succes">Login Successfully</string>
    <string name="hint_search_products">Search product</string>
    <string name="medicines">Medicines</string>
    <string name="personal_details"> PERSONAL DETAILS</string>
    <string name="setting">SETTING</string>
    <string name="policy_msg">Please accept Terms and Conditions to continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="manage_address">Manage Address</string>
    <string name="chnage_password">Change Password</string>
    <string name="pincode">Pincode<sup>*</sup></string>
    <string name="house_address">House Number, Street, Landmark<sup>*</sup></string>
    <string name="hint_name">Name<sup>*</sup></string>
    <string name="hint_contact">Contact Number<sup>*</sup></string>
    <string name="radio_home">Home</string>
    <string name="radio_office">Office</string>
    <string name="radio_other">Other</string>
    <string name="current_password">Current Password</string>
    <string name="retype_password">ReType Password</string>
    <string name="uplod_presciption_msg">Please upload valid image of prescription from your doctor.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="presciption">My Prescription</string>
    <string name="upload_prescription_security_msg">Your attached prescription will be secure and private</string>
    <string name="continue_text">CONTINUE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="upload">Upload</string>
    <string name="alert_cart_empty">Oops..! \n Your cart is empty</string>
    <string name="add_medicines">ADD MEDICINES</string>
    <string name="alert_medicines_emapty_msg">more recently like Aldus Page Version Of Lorem lpsum.</string>
    <string name="medicine_prescription_msg">Upload prescription and tell us what you need, We do the rest!</string>
    <string name="cat_title">POPULAR  CATEGORIES</string>
    <string name="search_result_not_found">No Search Result</string>
    <string name="no_data_found">No Data Found</string>
    <string name="chnage_address">Change</string>
    <string name="add_address">Add</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="order_as_prescritpion">ORDER AS PER PRESCRIPTION</string>
    <string name="upload_as_prescritpion">UPLOADED PRESCRIPTION</string>
    <string name="view_prescription">View attached prescription</string>
    <string name="prescriptionerrormsg">Please attach a prescription to continue</string>
    <string name="confrom_order"> CONFIRM ORDER</string>
    <string name="paymentmode">PAYMENT MODE</string>
    <string name="shipping_address">SHIPPING ADDRESS</string>
    <string name="add_new">Add New</string>
    <string name="confrom"> CONFIRM </string>
    <string name="cod_text">Cash On Delivery</string>
    <string name="razorpay">RazorPay</string>
    <string name="remove">Remove</string>
    <string name="total_mrp">Total Item(MRP)</string>
    <string name="discount">Discount</string>
    <string name="coupe_discount">Coupon Discount</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="gross_total">Total Rs</string>
    <string name="vital">Vitals</string>
    <string name="myconsultations">"My Consultations</string>
    <string name="price">Price :</string>
    <string name="buy">Buy</string>
    <string name="order_details">Details</string>
    <string name="view_image">View Image</string>
    <string name="order_no">Order No</string>
    <string name="order_Date">Order Date</string>
    <string name="order_ExDate">Expected Date</string>
    <string name="payment_status">Payment Status</string>
    <string name="order_status">Order Status</string>
    <string name="order_id">Order Id</string>
    <string name="reorde">Re-Order</string>
    <string name="re_try">Re-try</string>
    <string name="placeno">Placed On</string>
    <string name="estimate_date">Estimate Delivery Date</string>
    <string name="delivry_date">Delivery Date</string>
    <string name="orderitem">Order Items</string>
    <string name="about_issue_add_photo">ADD PHOTO ABOUT ISSUE </string>
    <string name="additional_details">Additional Details</string>
    <string name="order_cancle">ORDER CANCEL</string>
    <string name="cancle_issue_title">What issue did you face ?</string>
    <string name="enable_permission">Please Enable Camera Permission from settings</string>
    <string name="order_summery_msg">\'Amount to be paid\', will generate after you place the order and we receive prescription and confirm it. You\'ll be notified.</string>
    <string name="order_succes"> Order Placed Successfully</string>
    <string name="track_order">Track Your Order</string>
    <string name="item_list_as_prescrption">Items list as prescription</string>
    <string name="nofoundpriscription">No Information Available</string>
    <string name="please_check_later">Please Check later</string>
    <string name="filter_list">Filter List </string>
    <string name="remarks">Remarks</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="schedultype">Schedule Type</string>
    <string name="schedul_pattern">Schedule Pattern</string>
    <string name="interval">Interval</string>
    <string name="add_reminder">Add Reminder Time</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="dosage">Dosage</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="cannotdelete">Sorry, You can not Delete the Default Address.</string>
    <string name="removethisaddress">Are you sure you want to remove this Address?</string>
    <string name="allMedicine">All Medicine List</string>
    <string name="addtocart">Add To Cart</string>
    <string name="product_details">Description</string>
    <string name="rating_review">Rating and Reviews</string>
    <string name="product_use">Uses</string>
    <string name="product_SideEffects">SideEffects</string>
    <string name="Alcohol">Alcohol</string>
    <string name="Pregnancy">Pregnancy</string>
    <string name="Breastfeeding">Breastfeeding</string>
</resources>