<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aandroid="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_Add_Address_relative_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">


    <include
        android:id="@+id/fragment_Add_Address_tootlbar"
        layout="@layout/comman_view" />

    <View
        android:id="@+id/fragment_Add_Address_tootlbar_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/fragment_Add_Address_tootlbar"
        android:background="@color/seperator_color" />

    <RelativeLayout
        android:id="@+id/fragment_Add_Address_relative_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_Add_Address_tootlbar_view"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/fragment_Add_Address_logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />
    </RelativeLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_below="@+id/fragment_Add_Address_relative_logo"
            android:layout_above="@+id/fragment_Add_Address_textview_submit"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_Add_Address_input_Pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/fragment_Add_Address_edtext_Pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pincode"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true"
                        android:textSize="@dimen/_10sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_Add_Address_input_House_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/fragment_Add_Address_edtext_House_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/input_key"
                        android:hint="@string/house_address"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLength="50"
                        android:singleLine="false"
                        android:textSize="@dimen/_10sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_Add_Address_input_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/fragment_Add_Address_edtext_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/input_key"
                        android:hint="@string/hint_name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLength="50"
                        android:singleLine="false"
                        android:textSize="@dimen/_10sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_Add_Address_input_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/fragment_Add_Address_edtext_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_contact"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textSize="@dimen/_10sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_Add_Address_input_state"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fragment_Add_Address_edtext_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/state"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textSize="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_Add_Address_input_city"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fragment_Add_Address_edtext_City"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/city"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textSize="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_Add_Address_RadioGroup"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/_5sdp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_Add_Address_RadioButton_Home"
                        android:text="@string/radio_home"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_11sdp"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_Add_Address_RadioButton_Office"
                        android:text="@string/radio_office"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_11sdp"/>


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_Add_Address_RadioButton_Other"
                        android:text="@string/radio_other"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_11sdp"/>

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/fragment_add_address_temp_linear_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp">


                    <Switch
                        android:id="@+id/fragment_add_address_temp_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Set as Default"
                        android:textSize="@dimen/_13sdp"
                        android:layout_marginLeft="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    <TextView
        android:id="@+id/fragment_Add_Address_textview_submit"
        style="@style/text_normal_white_18"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/commmon_button"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="@dimen/_10sdp"
        android:text="@string/submit" />
</RelativeLayout>
