<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_white_color"
    android:id="@+id/fragment_reset_password_relative_container">

    <RelativeLayout
        android:id="@+id/fragment_reset_password_linear_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/_10sdp"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/fragment_reset_password_image_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/fragment_reset_password_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@+id/fragment_reset_password_image_back"
            android:text=""
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:visibility="visible" />
    </RelativeLayout>
    <View
        android:id="@+id/toolbarview"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/fragment_reset_password_linear_toolbar"
        android:background="@color/seperator_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarview"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fragment_reset_password_imageview_logo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:id="@+id/fragment_reset_password_relative_passwordfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_reset_password_imageview_logo"
            android:layout_marginTop="@dimen/_15sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_resetpassword_input_Newpassowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fragment_reset_password_edttext_NewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/new_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/fragment_reset_password_imageview_eye_login"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/ic_password_eye_hide"
                android:button="@null"
                android:checked="false" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/fragment_reset_password_linear_password_requerment"
            android:layout_below="@+id/fragment_reset_password_relative_passwordfield"
            android:layout_marginLeft="@dimen/_10sdp">

            <TextView
                android:id="@+id/fragment_reset_password_textview_error_passowrd_charter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password_min_characters"
                android:textSize="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fragment_reset_password_textview_error_passowrd_digit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_text"
                android:layout_marginLeft="@dimen/_3sdp"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fragment_reset_password_textview_error_passowrd_uppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uppercase_text"
                android:layout_marginLeft="@dimen/_3sdp"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fragment_reset_password_textview_error_passowrd_lowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowerscase_text"
                android:layout_marginLeft="@dimen/_3sdp"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />

        </LinearLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/fragment_reset_password_textview_done"
        style="@style/text_normal_white_18"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/commmon_button"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/done" />

</RelativeLayout>