<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_forgotpassword_liner_main"
    android:background="@color/dark_white_color"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/fragment_forgotpassowrd_linear_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/_10sdp"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/fragment_forgotpassword_image_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/fragment_forgotpassword_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@+id/fragment_forgotpassword_image_back"
            android:text=""
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:visibility="visible" />
    </RelativeLayout>
    <View
        android:id="@+id/toolbarview"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/fragment_forgotpassowrd_linear_toolbar"
        android:background="@color/gray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarview"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:id="@+id/fragment_forgotpassword_imageview_logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/fragment_forgotpassword_textview_msg"
            android:layout_below="@+id/fragment_forgotpassword_imageview_logo"
            android:text="@string/forgotpasswordmsg"
            android:textColor="@color/gray"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="@dimen/_10sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forgotpassword_input_EmailId"
            android:layout_width="match_parent"
            android:layout_below="@+id/fragment_forgotpassword_textview_msg"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <EditText
                android:id="@+id/fragment_forgotpassword_edttext_EmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:digits="@string/input_key"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>


    <TextView
        android:id="@+id/fragment_forgotpassword_textview_submit"
        style="@style/text_normal_white_18"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/commmon_button"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="@dimen/_10sdp"
        android:text="@string/submit" />

</RelativeLayout>